# upside

./: .flake8  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.json.bak  settings.local.json
.claude/commands/: builtin.md  clean.md  commit.md  git.md  optimize.md  simplify.md
markdown/: ASSIGNMENT.md  SPARK.md
tests/: __init__.py  test_download.py  test_extract.py  test_thread.py
upside/: __init__.py  cli.py  download.py
upside/parse/: __init__.py  extract.py  graph.py  jwzthreading.py  load.py  thread.py
